--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -164,15 +164,25 @@
   PB_ENG_Debate_Military_Policy_desc:0 "The British Empire is the mightiest military force ever seen in human history, however many in Imperial Command are split between unifying the different dominion militaries into one single Imperial entity or giving each dominion autonomy in their military affairs. The 1934 congress will put this military split to rest."
 
   PB_ENG_Neo_Victorianism:0 "New Victorianism"
+  PB_ENG_Neo_Victorianism_desc:0 "The era of Queen Victoria saw the British Empire unchallenged and dominant over the world where London was the center of the world. The Imperial congress has made the decision to revert back to the glory days of old in which many are all ready dubbing 'New Victorianism'."
   PB_ENG_British_Settlements:0 "A New Life Awaits You in the Colonies!"
+  PB_ENG_British_Settlements_desc:0 "Cecil Rhodes, Thomas Raffles and many other Englishmen from across the globe have secured wealth and new living space for the Britain and her citizens. Join them and many other pioneers civilizing all four corners of the globe in the name of crown and Britannia."
   PB_ENG_Integrate_the_Economies:0 "Propose the Sterling Zone"
+  PB_ENG_Integrate_the_Economies_desc:0 "The Bank of England shall implement the Sterling zone across the dependencies currently under our control and propose to the Commonwealth realms and our colonies a single unified currency under the pound sterling which will grant more fluid trade transactions and economic benefits across the empire."
   PB_ENG_White_Mans_Burden:0 "The White Man's Burden"
+  PB_ENG_White_Mans_Burden_desc:0 "Joseph Chamberlain has quoted that the Anglo white man is the greatest race to ever inhabit God's earth and that it is the duty of the white man to inhabit and develop the world so that the Anglo can oversee over the savages of the world and to make sure that Britain graces every corner of the world wherever they like it or not."
   PB_ENG_African_Tourism:0 "Tourism in the Dark Continent"
+  PB_ENG_African_Tourism_desc:0 "By promoting tourism in Africa from the jungles of Nigeria to the plains of East Africa, we can bring money into the African colonies allowing us to gain a new source of revnue whilst also enticing many American and British citizens to possibly start a new life in the dark continent"
   PB_ENG_Federalist_Idea:0 "Promote Federalism"
+  PB_ENG_Federalist_Idea_desc:0 "By supporting parties believing in the federalisation of the British Empire across our many colonies we can bring down the barriers of nationalism across the many Commonwealth realms and to remind the empire who rules the world."
   PB_ENG_Reorganize_West_Africa:0 "Reorganize the West African Departments"
+  PB_ENG_Reorganize_West_Africa_desc:0 "By taking over the oldest colonies from the British African Authority we can begin the colonisation of these colonies with new white families and to begin the intergration process of these colonies into the United Kingdom to become official parts of the union."
   PB_ENG_Break_down_Imperial_Barriers:0 "Encourage Intra-Empire Immigration"
+  PB_ENG_Break_down_Imperial_Barriers_desc:0 "By encouraging citizens from all over the British Empire and the Commonwealth we can increase our economic activity across the world whilst also breaking down the nationality of these citizens and to make them reveal to them that they are all British subjects in nature."
   PB_ENG_Security_Forces:0 "Expand the Imperial Security Forces"
+  PB_ENG_Security_Forces_desc:0 "By expanding the Imperial Security Forces an organisation which keeps the peace in the colonies (also known as the ISF) in our colonies; we can make sure that any native resitance against the cogs of civilization are crushed whilst also consolidating compliance from their local rulers."
   PB_ENG_Imperial_Federalism_Retained:0 "A Federalized Empire"
+  PB_ENG_Imperial_Federalism_Retained_desc:0 "The British Empire has been Federalized, from America to Victoria the Empire knows only one master and that master is the United Kingdom of Great Britain and Ireland. London has essentially become the cultural and political center of the world, none shall dare challenge the British Empire! Rule Britannia!"
 
   PB_ENG_Fortify_the_Suez:0 "Fortify the Suez"
   PB_ENG_Fortify_Gibraltar:0 "Fortify the Rock"
@@ -193,21 +203,37 @@
   PB_ENG_Federation_of_Nations:0 "A Confederation of Nations"
 
   PB_ENG_Foreign_Policy:0 "The Lion Wakes"
+  PB_ENG_Foreign_Policy_desc:0 "The British Lion has been sleeping for decades, satisfied that it's current strength has crowned it ruler of the jungle however decades of revanchism and hatred by the Lion's old foes has awaken the British Lion from it's slumber for one more challenge for the rulership of the world."
   PB_ENG_Denounce_Neutrality:0 "Denounce Neutrality"
+  PB_ENG_Denounce_Neutrality_desc:0 "First thing first; we must make sure that our government and the opposition denounce the status quo in which this country has been fellowing since the last war to stir up a new wave of patriotic fever."
   PB_ENG_Fight_Pacifism:0 "Attack the Pacifists"
+  PB_ENG_Fight_Pacifism_desc:0 "The generation which birthed from the veterans of the Great War has spawned a new consensus of pacifism nationwide. Ignorant of their parents sacrifice in the last war we must gather our nation's finest to attack these cowards and break their excuse for not fighting for King and Country."
   PB_ENG_Revive_the_White_Feathers:0 "Revive the White Feather Society"
+  PB_ENG_Revive_the_White_Feathers_desc:0 "The White Feather Society was a society which targetted the minority who allowed others to fight for their stead even if they were fighting fit. By restoring this society we can make sure that these cowards who allowed others to die will join their brothers in arm for service to the British Empire."
   PB_ENG_Denounce_Red_Pacifists:0 "Denounce the Red Cowards"
+  PB_ENG_Denounce_Red_Pacifists_desc:0 "The working class man in Britain is normally willing to fight for their freedoms, their King and also their country, however a minority of these men infiltrated by republicans and pacifists which have joined the pacifist cause. By working with the Workers Union party we can denounce this movement and prevent this movement from getting out of hand."
   PB_ENG_Alliance_With_the_Right:0 "Promote Nationalism"
+  PB_ENG_Alliance_With_the_Right_desc:0 "The United Kingdom is greatest country to ever set foot upon God's earth. By working with the nationalists we can promote a sense of patriotic duty towards England the British Empire allowing us tap into a new source of recruits even if that might mean working with the nationalists." 
   PB_ENG_National_Propaganda_Campaign:0 "National Propaganda Campaign"
+  PB_ENG_National_Propaganda_Campaign_desc:0 "By working with British Pathé news, we can promote a propaganda campaign to rally England's lions to the Union Jack to defend our values and our Empire from any adversary which might cross our path."
   PB_ENG_Anti_French_Revanchism:0 "Anti-French Revanchism"
+  PB_ENG_Anti_French_Revanchism_desc:0 "'The French dogs are once again challenging our god given might lads, remember lads those Frenchie's have been at war with us for as long as English history can remember from the Seven years war to the Great war but we won time and time again and now those wankers are spoiling for another fight. Now lads we got a job to do so let's give those French dogs a kickin'"
   PB_ENG_Wrangle_Local_Leaders:0 "Wrangle Local Leaders"
+  PB_ENG_Wrangle_Local_Leaders_desc:0 "Britain even though an island is still a very large place with towns and villages all over the land where large parts of the population live. However these town councils and mayors have influence where the central government cannot reach in their local authorities. By making sure these areas are loyal to we can gain the recruits and support Britannia needs to win this new war."
   PB_ENG_Unite_the_Government:0 "Unite the Government on Rearmament"
+  PB_ENG_Unite_the_Government_desc:0 "The British government and opposition must unite and pass acts and laws to start the rearmament of the nation to brace ourselves for the coming conflict."
   PB_ENG_Renewed_War_Support:0 "Renewed Militarism"
+  PB_ENG_Renewed_War_Support_desc:0 "Britannia called and her citizens have mustered. So let us therefore brace ourselves to our duties, and so bear ourselves, that if the British Empire and its Commonwealth last for a thousand years, men will still say, 'This was their finest hour.'"
   PB_ENG_Strike_Abyssinia:0 "Put Down the Abyssinian Lion"
+  PB_ENG_Strike_Abyssinia_desc:0 "Abyssinia is one of the few uncivilised African nations to survive the European onslaught in Africa, however with a new war on the horizon we must put down this lion to make sure our grip on East Africa is secured."
   PB_ENG_Middle_East_Expansion:0 "Expedition into Arabia"
+  PB_ENG_Middle_East_Expansion_desc:0 "The land of Arabs even though free from their Turk overlords remain divided and rich for the taking. With rumours of oil being found in Arabia we will happily send an expedition into Arabia to civilise the region, in the name of civilisation of course."
   PB_ENG_Demand_Iranian_Coast:0 "Enforce Claims on the Persian Gulf"
+  PB_ENG_Demand_Iranian_Coast_desc:0 "With much of our oil supply shipping out of the trucial states through the Persian Gulf we will send a demand to Tehran demanding for their coastlines to be handed over to us to secure our oil interests or face the wrath of the British Empire."
   PB_ENG_Middle_East_Expansion_2:0 "Consolidate Northern Arabia"
+  PB_ENG_Middle_East_Expansion_2_desc:0 "Northern Arabia, a vast desert uncivilised and sparsely populated must be taken by force to consolidate our grip on the Middle East."
   PB_ENG_Middle_East_Expansion_3:0 "Complete Control of the Gulf"
+  PB_ENG_Middle_East_Expansion_3_desc:0 "We must finish our consolidation of the Arab world by eradicating whatever states have survived our initial onslaught in the Middle East. For King, Country and the black gold which inhabits this corner of the earth advance soldiers of Britannia!"
 
   PB_ENG_King_Death:0 "The Death of the King"
   PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
@@ -251,7 +277,7 @@
   PB_ENG_Fleet_in_Being:0 "Reinforce the Pound-Mahan Doctrine"
   PB_ENG_Fleet_in_Being_desc:0 "The old sea dogs of the Royal navy notably admiral Dudley Pound and his old guard in the Admiralty has called for the naval system to essentially remain the same however to also remove all impurities in the current method of naval warfare. This will allow the Royal Navy to carry on the big guns fleet left by Jackie Fisher whilst also preparing us for the next war."  
   PB_ENG_Embrace_Carriers:0 "Side with the Cunningham Clique"
-  PB_ENG_Embrace_Carriers_desc:0 "Vice admiral Andrew Browne Cunningham affectionately nick named ABC has called for the new useage of the 'aircraft carrier'. Cunningham has bought similiar minded officers in his station in the mediterranean to force the Admiralty to embrace aircraft into naval warfare citing that aicraft will be able to reach a hostile squadron quicker then any battlecruiser."
+  PB_ENG_Embrace_Carriers_desc:0 "Vice admiral Andrew Browne Cunningham affectionately nick named ABC has called for the new useage of the 'aircraft carrier'. Cunningham has bought similiar minded officers in his station in the Mediterranean to force the Admiralty to embrace aircraft into naval warfare citing that aicraft will be able to reach a hostile squadron quicker then any battlecruiser."
   PB_ENG_Expand_Trade_Fleet:0 "Expand the Trade Fleet"
   PB_ENG_Expand_Trade_Fleet_desc:0 "The British Empire and her Commonwealth rely on the cargo ship to carry on the life blood of civilization around the globe. Over a third of world trade passes through Britain annually including raw materials and food supplies which keeps the crown of empire together. If this life blood is threaten then the empire falls so we must ensure to expand the merchant marine to keep the empire's way of life forever." 
   PB_ENG_Expand_Dockyards:0 "Expand the Dockyards"
@@ -266,7 +292,7 @@
   PB_ENG_Air_Reforms:0 "Reform the Royal Air Force"
   PB_ENG_Air_Reforms_desc:0 "The Royal Air Force is the youngest branch of the imperial armed forces and became a seasoned player in the Great War over the trenches. However the Great War was decades ago and the Royal Air Force has not faced a challenge ever since. This has made the Royal Air Force obsolete and in dire need for reform if we are to have a proper modern air force."
   PB_ENG_Harris_Doctrine:0 "Harris Doctrine"
-  PB_Eng_Harris_Doctrine_desc:0 "Air marshal Harris also known as to his rivals and friends alike 'Bomber Harris' has called for an air doctrine of strategic bombing. Bomber Harris argues that if we economically cripple a nation through bombing and destruction he has declared that the will to fight the might of the British forces will be destoryed, we can only hope he is right."
+  PB_ENG_Harris_Doctrine_desc:0 "Air marshal Harris also known as to his rivals and friends alike 'Bomber Harris' has called for an air doctrine of strategic bombing. Bomber Harris argues that if we economically cripple a nation through bombing and destruction he has declared that the will to fight the might of the British forces will be destoryed, we can only hope he is right."
   PB_ENG_Portal_Doctrine:0 "Portal Doctrine"
   PB_ENG_Portal_Doctrine_desc:0 "Air marshal Charles Portal is advocating for the use of tactical bombers to help our lads on the ground to win the war. By having bombers give close air support, marshal Portal believes that Imperial forces will be able to crush any military resitance with ease allowing our troops to open a path to victory. If we are to implement this plan we only hope that we have enough planes to see this through."
   PB_ENG_Strategic_Bombers:0 "Heavy Bombers"
@@ -274,7 +300,7 @@
   PB_ENG_CAS:0 "Close Air Support"
   PB_ENG_CAS_desc:0 "By focusing on outfitting our planes with light payloads designed to provide tactical support to our troops, the Royal Air Force will be able to help pave a path of destruction across the battlefield allowing our lads on the ground to win what was considered unwinnable battles."
   PB_ENG_Heavy_Fighters:0 "Escort Fighters"
-  PB_ENG_Heavy_Fighters_desc: "By creating fighters big enough to have the range of our heavy bombers, we can ensure that our hurricane of destruction will be protected all the way through to the end."
+  PB_ENG_Heavy_Fighters_desc:0 "By creating fighters big enough to have the range of our heavy bombers, we can ensure that our hurricane of destruction will be protected all the way through to the end."
   PB_ENG_Light_Fighters:0 "Light Fighters"
   PB_ENG_Light_Fighters_desc:0 "By creating maneuverable and light fighters for fighter command, we can ensure aerial superiority in the skies, allowing the troops on the ground to be guarded from any threat from the air."
   PB_ENG_Nuclear_Weapons:0 "Establish Tube Alloys"
