--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -185,11 +185,17 @@
   PB_ENG_Imperial_Federalism_Retained_desc:0 "The British Empire has been Federalized, from America to Victoria the Empire knows only one master and that master is the United Kingdom of Great Britain and Ireland. London has essentially become the cultural and political center of the world, none shall dare challenge the British Empire! Rule Britannia!"
 
   PB_ENG_Fortify_the_Suez:0 "Fortify the Suez"
+  PB_ENG_Fortify_the_Suez_desc:0 "The Suez Canal is quite possibly the Achilles heel of the British Empire, most of the empires trade passes through the Suez including the raw materials for Britain, if this vital trade link is ever to fall the consequences would be limitless, we must fortify the canal to make sure we will never be crippled by it's loss."
   PB_ENG_Fortify_Gibraltar:0 "Fortify the Rock"
+  PB_ENG_Fortify_Gibraltar_desc:0 "Gibraltar is the entrance to the Mediterranean and the shipping lanes of the Suez, a crucial point in the British imperial project if Gibraltar was to ever fall the royal navy would not be able to protect the vital supplies shipping from the Suez and cause a collapse of imperial trade, we shall fortify the rock to make sure this scenario never occurs."
   PB_ENG_Fortify_Singapore:0 "Fortify Singapore"
+  PB_ENG_Fortify_Singapore_desc:0 "Singapore is the Gibraltar of the oriental, millions of pound worth of trade passes infront of this paradise city whilst also projecting British interests in the region. To make sure this mandate never falls we shall garrison and fortify the region to protect Singapore from any hostile forces."
   PB_ENG_Imperial_Assistance_Focus:0 "Imperial Mutual Assistance Plan"
+  PB_ENG_Imperial_Assistance_Focus_desc:0 "Many key men in the Commonwealth have called for the empire as a whole to begin to fund poorer regions in the empire to allow economic growth in these areas to hit the same standard as London or Philadelphia. Many are in support for this idea which has been fittingly called the Imperial Mutal Assitance Plan."
   PB_ENG_Imperial_Military_Focus:0 "Standardize the Imperial High Command"
+  PB_ENG_Imperial_Military_Focus_desc:0 "Many in imperial high command have called for the standardization of all the Commonwealth and Colony armies in the empire including the top brass in high command. This will the Empire as a whole to reduce logistical and bureaucratic restrictions between the many different militaries in the empire allowing for a more effective imperial army."
   PB_ENG_Imperial_Investment_Focus:0 "Imperial Investments Committee"
+  PB_ENG_Imperial_Investment_Focus_desc:0 "Many businessmen and pioneers have called for Westminister to allow them and government institutions to invest into new resources of the colonies from the icy shores of Canada to the mines of East Africa. This investment committee will bring new resources to the table whilst also providing job security to many settlers and natives in the Commonwealth."
 
   PB_ENG_Englightened_Imperialism:0 "Enlightened Imperialism"
   PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
