--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -11,7 +11,7 @@
   PB_RUS_Mixed_Nation:0 "A Nation Divided"
   PB_RUS_Mixed_Nation_desc:0 "Russia for all it's history has remained a state united by luck. It's people have no loyalties to their overlords in Moscow and unless significant change occures then it shall stay that way or become something worse." 
   PB_RUS_Bitter_Revanchism:0 "Bitter Revanchism"
-  PB_RUS_Bitter_Revanchism_desc:0 "The Tsar and his people blame their former Allies of Britain and Germany for all their countries woes and the Current Government encourages this thought religiously."
+  PB_RUS_Bitter_Revanchism_desc:0 "The Tsar and his people blame their former Allies of Britain and Germany for all their countries woes and the Current Government encourages this thought religiously.\n\n§R---If Petrograd, Moscow, and Tsaritsyn fall we will witness the collapse of Russia---§!"
   PB_RUS_Russian_Nightmare:0 "The Russian Nightmare"
   PB_RUS_Russian_Nightmare_desc:0 "From the frozen wastes of Siberia to the wheat fields of Ukraine there is an almost silent voice of protest against the Tsar's absolutist rule. Political enemies are large in number and even his closest allies would rather see him expelled from government."
   PB_RUS_Youth:0 "Youth Indoctrination"
@@ -25,6 +25,8 @@
   PB_RUS_Foreign_Equipment:0 "A Modernising Industry"
   PB_RUS_Tank_Production:0 "Tank Production Focuses"
   PB_RUS_Grey:0 "The Grey Initiative"
+  PB_RUS_A_State_Under_Construction:0 "A State Under Construction"
+  PB_RUS_A_State_Under_Construction_desc:0 "Times are changing. The Russia we once knew and loved has ceased to exist. Around every street corner stands a man in black. He is silent. He is undisturbed. Though stands watching every move, breath, and thought our soul inhabits."
   ##########################
   # TRAITS
   ##########################
@@ -128,13 +130,29 @@
   russia26desc:0 ""
   russia26opta:0 ""
   russia27title:0 "Our Father, who art in heaven"
-  russia27desc:0 ""
-  russia27opta:0 "A Purist Russia"
-  russia27optb:0 "A True Russia"
-  russia27optc:0 "A Liberated Russia"
+  russia27desc:0 "The Tsar contracted Epidemic typhus only a few days ago and is in a state of decreasing health. All hands are on deck to keep him breathing but some figures have already begun taking action if the worst happens. Every day a shipment of weapons go missing, a politician is found dead, and a once loyal party member has a change of heart. Something is up and if Nicholas's condition doesn't improve then the unthinkable may occur."
+  russia27opta:0 "Worsen His Health Through Any Means"
+  russia27optb:0 "Keep His Heart Beating"
   russia28title:0 "The Collapse Of Russia"
-  russia28desc:0 ""
-  russia28opta:0 ""
+  russia28desc:0 "There were visible signs of distress all throughout the room. Sweat breached through the forehead of every man who, by some unfortunate play of events, found themselves waiting in a confined makeshift conference room that was constructed by an ugly combination of peasantry furniture and party memorabilia. A petty officer gathered the courage and balls to speak on everyone's behalf, regurgitating the exact same thoughts his fellow officers inhabitated. "[Root.GetLeader]? We stopped receiving communications past Perm. I believe the end is near." The sound of throat movement echoed inside the officer's mouth and the proccess of swallowing saliva played its short and violent course."
+  russia28opta:0 "What The Fuck!"
+  russia35title:0 "It Only Worsens"
+  russia35desc:0 ""What does the medical report read?" Questioned Alex hoping to hear something other than the truth. "Increased sensitivity to light, developing headaches, severe muscle pains, nothing good." Both of them knew what the outcome would be in time though they refused to believe it. It certainly couldn't be caused by natural means. A king becoming the victim of a crime that only inhabited the lower class is rare, what was more confusing was the delays for the needed medication the Tsar so desperately needed. Then it clicked."
+  russia35opta:0 "Fuck It, Give Some Loyal Dog A Gun"
+  russia35optb:0 "Patience"
+  russia36title:0 "Franco Russian Landship Concordat"
+  russia36desc:0 ""
+  russia36opta:0 "Whatever Benefits Our Allies"
+  russia36optb:0 "Tell These Dumb Dogs No"
+  russia37title:0 "France Agrees"
+  russia37desc:0 ""
+  russia37opta:0 "Wonderful"
+  russia38title:0 "France Refuses"
+  russia38desc:0 ""
+  russia38opta:0 "What!"
+  russia39title:0 "The Russian Armed Forces"
+  russia39desc:0 ""
+  russia39opta:0 "All For Russia!"
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -177,12 +195,15 @@
   RUS_Reformists:0 "The Reformists Have United The Party"
   RUS_Loyalists:0 "The Loyalists Have United The Party"
   russia29tooltip:0 "Various states will receive infrastructure improvements"
+  russia30tooltip:0 "\nA series of events will play out regarding the §YTsar's§! health"
+  russia31tooltip:0 "The Tsar will have to wait a while for his medicine. How unfortunate."
   tension_RUS.1.t:0 "A Not So Royal Russia" 
   tension_RUS.2.t:0 "Off With Their Heads!"
   Winter_War:0 "The Winter War Has Started"
   China_Collapse:0 "China Has Collapsed"
   RUS_WW2:0 "Europe Is Alight"
-  russia29tooltip:0 "§RWe Will Begin An Age Of Expansion§!"
+  russia32tooltip:0 "§RWe Will Begin An Age Of Expansion§!"
+  russia33tooltip:0 "Tell the doctors to hurry up!"
   ##########################
   # FOCUS
   ##########################
@@ -497,3 +518,11 @@
   Conquer_Baikal:0 "Conquer Baikal"
   Conquer_The_Eastern_Republic:0 "Conquer The Eastern Republic"
   Conquer_The_Fanatics:0 "Conquer The Fanatics"
+
+  ##############
+  ### Card Shit, Might revisit
+  ##############
+  PB_RUS_Cards:0 "A Game Of Cards" 
+  RUS_Card_1:0 "No Card Selected"
+  RUS_Card_2:0 "No Card Selected"
+  RUS_Card_3:0 "No Card Selected"
