--- a/localisation/PB_Japan_l_english.yml
+++ b/localisation/PB_Japan_l_english.yml
@@ -14,6 +14,7 @@
   PB_JAP_Sakurakai_desc:0 "	Whispers abound in smokey back rooms of a society dedicated to a return to the revolutionary principles that Hashimoto betrayed. Formed of an alliance of disenchanted lefitsts, this so-called Cherry Blossom Society seeks to overthrow the Hashimoto government and create a more democratic Japan."
   PB_JAP_Reactionary_Plot:0 "Reactionary Plot?"
   PB_JAP_Reactionary_Plot_desc:0 "Despite the Imperial government being overthrown more than a decade ago, there are still some that harbor sentiments with the Emperor. Should enough chaos erupt in the Republic, such elements in our society may seek to reinstate the old Imperial family."
+  PB_JAP_Intense_Paranoia:0 "Intense Paranoia"
 
   ##########################
   # FOCUSES
@@ -26,8 +27,22 @@
   PB_JAP_Assassination_Attempt:0 "...Or Not"
 
   PB_JAP_Hashimoto_Loyalists:0 "Loyalty to Hashimoto"
+  PB_JAP_Purge_Bureaucrats:0 "Purge the Bureaucrats"
+  PB_JAP_Purge_Army:0 "Purge the Army"
+  PB_JAP_Purge_Navy:0 "Purge the Navy"
+  PB_JAP_Loyalty_Oaths:0 "Demand Oaths of Loyalty"
+  PB_JAP_Make_Shit_Up:0 "Fabricate Evidence"
+  PB_JAP_Empower_Red_Guards:0 "Empower the Red Guards"
+  PB_JAP_Intensify_Paranoia:0 "A National State of Paranoia"
 
   PB_JAP_Sakurakai:0 "A Time for Action"
+  PB_JAP_Contacts_in_Navy:0 "Contacts in the Republican Navy"
+  PB_JAP_Contacts_in_Army:0 "Contacts in the Republican Army"
+  PB_JAP_Tea_with_Anarchists:0 "Tea Time with Sugako"
+  PB_JAP_Promise_Reforms:0 "Promise them Reforms..."
+  PB_JAP_Promise_Autonomy:0 "Promise them Autonomy..."
+  PB_JAP_Wild_Promises:0 "Promise them the World..."
+  PB_JAP_And_Dont_Deliver:0 "...And Hope We Survive Long Enough to Deliver"
 
   ##########################
   # DECISIONS
