--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -198,15 +198,25 @@
   PB_ENG_Imperial_Investment_Focus_desc:0 "Many businessmen and pioneers have called for Westminister to allow them and government institutions to invest into new resources of the colonies from the icy shores of Canada to the mines of East Africa. This investment committee will bring new resources to the table whilst also providing job security to many settlers and natives in the Commonwealth."
 
   PB_ENG_Englightened_Imperialism:0 "Enlightened Imperialism"
+  PB_ENG_Englightened_Imperialism_desc:0 "The Congress has voted and a new path of the empire has been paved. An empire which shall now spread its wings not through conquest and bloodshed but through co-operation and fellowship with the world, gone are the days of barbaric conquest and now are the days of Enlightened Imperialisim, God save the Commonwealth and all her realms."
   PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
+  PB_ENG_Mission_to_Civilize_desc:0 "Our goal in our colonies are not to conquer and enslave but to liberate and show the way to those who still live in ancient times, to show them a new world of European medicine and to help build a new society for those who are stuck in a bygone era. We are on our mission to civilize the globe and we shall not stop till are children of Britannia."
   PB_ENG_Colonial_Suffrage:0 "End the Colonial Segregation Laws"
+  PB_ENG_Colonial_Suffrage_desc:0 "The Emprie loves all it's children even if they're black, white or yellow for they are all welcome in our great society however many of our own institutions and our fellow associates in the Commonwealth have many laws segregating white from 'savage'. With a new era of thinking we shall implement new laws to all in the federation to officially desegregate the Commonwealth."
   PB_ENG_Imperial_Partnership:0 "Partners, Not Superiors"
+  PB_ENG_Imperial_Partnership_desc:0 "The many nations of the Commonwealth fought hard in the Great war and paid the price for protecting the project known as the British Empire. We must realise that these nations are not beneath us but are fellow comrades in arms in times of war and peace. From now on we are Partners, Not Superiors."
   PB_ENG_New_Autonomies:0 "Establish New Commonwealths"
+  PB_ENG_New_Autonomies_desc:0 "With growing nationalism across the empire and new threats to our great Commonwealth slowly forming, we shall create new realms in the federation to lessen the load on the British economy whilst also creating new partners to help us in the dark times ahead."
   PB_ENG_Starship_Troopers:0 "Service Guarantees Citizenship"
+  PB_ENG_Starship_Troopers_desc:0 "Many colonial subjects serve in the colonial army for Britain yet when there service is over we throw them in the dirt like they are scum.We must rectify this cruelty and grant them full British citizenship and benefits to thank them for there service to the crown."
   PB_ENG_Confederation_Dream:0 "Loyalty to an Idea, Not a Nation"
+  PB_ENG_Confederation_Dream_desc:0 "The empire is so diverse that one naturally feels loyal to their local nation and community. To deal with this the Imperial Broadcasting Service shall start broadcasting that all citizens should be loyal to the crown and the shared British values we hold all across the Commonwealth."
   PB_ENG_New_Colossus:0 "Anglotropicalism"
+  PB_ENG_New_Colossus_desc:0 "The Anglo race has settled all over the globe from America to Asia, our secret to our success must be our culture. The Anglo culture must be designed for settling the world, by encouraging this idea to our people to settle areas on the colonial frontier we can create a truly global Anglo race."
   PB_ENG_Tired_Poor:0 "Multicultural Imperialism"
+  PB_ENG_Tired_Poor_desc:0 "Our culture spreads far and wide from the Chinese in Hong Kong to our loyal Sarawakian allies who both share the identity of the British culture, one does not require to be white and English to spread the influence of the crown all over the globe. Instead we can all contribute to the expansion of imperial culture across the world."
   PB_ENG_Federation_of_Nations:0 "A Confederation of Nations"
+  PB_ENG_Federation_of_Nations_desc:0 "The Prime Minister has called the British Empire as an entity with nations cooperating inside of it. Now this dream has been realised with shared imperial values across the federation. We are no longer master and servant but instead one people united under one crown. Our new creed shall be 'One People, One Destiny.'"
 
   PB_ENG_Foreign_Policy:0 "The Lion Wakes"
   PB_ENG_Foreign_Policy_desc:0 "The British Lion has been sleeping for decades, satisfied that it's current strength has crowned it ruler of the jungle however decades of revanchism and hatred by the Lion's old foes has awaken the British Lion from it's slumber for one more challenge for the rulership of the world."
