--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -124,9 +124,13 @@
 
 
   PB_ENG_Path_to_Recovery:0 "Back to the Top"
+  PB_ENG_Path_to_Recovery_desc:0 "The British economy is the largest economy in the world however the recent woes to our industry has cost us and the Commonwealth dearly. All ready the Prime Minister has begun a series of economic reforms to bring the nations economy back to the top of the world." 
   PB_ENG_Increase_Public_Spending:0 "Increase Public Spending"
+  PB_ENG_Increase_Public_Spending_desc:0 "The victory of the Worker's Union Party has allowed for a new economic approach to Britain. All ready the Chancellor of the Exchequer has begun the creation of a new budget which will focus on increased government spending on the nation such as new health service for the country and many other things. Maybe this shall be a possible begining of the welfare state."
   PB_ENG_Nationalization:0 "Nationalize Vital Industries"
+  PB_ENG_Nationalization_desc:0 "Certain industries such as water utilities and eletrical companies in Britain have gone bankrupt which has caused a panic across the general public. To prevent a crisis amongst our nation we shall nationalize these companies to protect the wellbeing of our citizens whilst also preventing any extortionate prices from their greedy owners."
   PB_ENG_NHS:0 "National Health Commission"
+  PB_ENG_NHS_desc:0 "With many of Britain's poorest in horendous conditions, the government has seen it necessary to form a commission to discuss the national health of our systems and ways to improve our populace health as a whole in a way which is not divided by class. All ready some are calling this commission to be a new force in Britain, a force which is calling for an establishment of a National Health System"
   PB_ENG_Welfare_State:0 "A Welfare State"
 
   PB_ENG_Tackle_Homelessness:0 "The War on Homelessness"
@@ -145,6 +149,7 @@
 
   PB_ENG_Establish_IRI:0 "Establish the IRI"
   PB_ENG_Control_Failed_Banks:0 "Control the Failed Banks"
+
 
   PB_ENG_Economic_Isolationism:0 "Economic Self Sufficiency"
   PB_ENG_State_Capitalism:0 "State Capitalism"
