Cold War Mechanic (Not Done)

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -424,7 +424,6 @@
   RUS_all_eyes_on_france:0 "All Eyes On France"
   RUS_diplomatic_talks:0 "Diplomatic Talks"
   RUS_seek_cooperation:0 "Seek Cooperation"
-  RUS_ease_border_tensions:0 "Ease Border Tensions"
   RUS_joint_administration_corps:0 "Joint Administration Corps"
   RUS_bend_the_knee:0 "Bend The Knee"
   RUS_stand_strong:0 "Stand Strong"
@@ -583,4 +582,32 @@
   ##########################
   
   PB_RUS_Cold_War:0 "The Franco-Russian Cold War"
-  PB_RUS_Cold_War_desc:0 "With Europe at a stand still and the barrels of Russian and French soliders staring down at each other one can only ask when armageddon will occur. Both sides want a little bit more land, men, and resources. If this cold-war isn't dealt with then mainland Europe know very well what will occur. \n\nIt was always assured that France's and Russia's ambitions will clash the day their so called pact of revenge formed. Even the Germans knew this, exploiting weaknesses in their communications networks, baiting stubborn generals from both sides, and overall lack of coordination between the powers. Now the time has come to truely test this pact of friendship and revenge. Will they cooperate and conquer or will they hinder and fall? Only time can tell. \n\nYou must balance out the levels of influence and tension to avoid a war with our respected ally, unless war is what you want.\n\n\n                                                            Political Tension: §Y[?POLITICAL_TENSION]§!\n\n French Influence: §Y[?F_INFLUENCE]§!                                                                             Russian Influence: §Y[?R_INFLUENCE]§!\n"
+  PB_RUS_Cold_War_desc:0 "With Europe at a stand still and the barrels of Russian and French soliders staring down at each other one can only ask when armageddon will occur. Both sides want a little bit more land, men, and resources and if this cold-war isn't dealt with peacefully then mainland Europe knows very well what will occur. \n\nIt was always assured that France's and Russia's ambitions will clash the day their so called pact of revenge formed. Even the Germans knew this, exploiting weaknesses in their communications networks, baiting stubborn generals from both sides, and overall lack of coordination between the powers. Now the time has come to truely test this pact of friendship and revenge. Will they cooperate and conquer or will they hinder and fall? Only time can tell.\n\nFrench Influence Points: §Y[?FRA_INF]§! £decision_influence_small\n\nRussian Influence Points: §Y[?RUS_INF] £decision_influence_small"
+  Political_Tension_Very_Low:0 "The current §YPolitical Tension§! between France and Russia is: §GVery Low§!"        
+  RUS_send_diplomats:0 "Send Diplomats"
+  Political_Tension_Low:0 "Low"    
+  Political_Tension_Meduim:0 "Meduim"      
+  Political_Tension_High:0 "High"    
+  Political_Tension_Very_High:0 "Very High" 
+  RUS_ease_border_tensions:0 "Ease Border Tensions" 
+  RUS_transfer_workers:0 "Transfer German Workers"    
+  RUS_joint_administration_forces:0 "Joint Administration Forces"
+  RUS_economic_subsidies:0 "Economic Subsidies"                                             
+  RUS_military_knowledge_sharing:0 "Military Knowledge Sharing"
+  decision_cost_30_INF_blocked:0 "£decision_influence_small §R15§!"
+  decision_cost_30_INF:0 "£decision_influence_small §Y15§!"
+  decision_cost_45_INF:0 "£decision_influence_small §Y45§!"
+  decision_cost_45_INF_blocked:0 "£decision_influence_small §R45§!"
+  decision_cost_20_INF:0 "£decision_influence_small §Y20§!"
+  decision_cost_20_INF_blocked:0 "£decision_influence_small §R20§!"
+  decision_cost_55_INF:0 "£decision_influence_small §Y55§!"
+  decision_cost_55_INF_blocked:0 "£decision_influence_small §R55§!"
+  decision_cost_35_INF:0 "£decision_influence_small §Y35§!"
+  decision_cost_35_INF_blocked:0 "£decision_influence_small §R35§!"
+  decision_cost_70_INF:0 "£decision_influence_small §Y70§!"
+  decision_cost_70_INF_blocked:0 "£decision_influence_small §R70§!"
+  INF_tt:0 "§YIncrease Influence\n_________________§!\n\nThe conversion rate for §YInfluence§! is 5 Political Power for 2 §YInfluence§!. Once you have 5 Political Power clicking this button will grant you 2 §YInfluence§! which can be used for the following decisions.\n\n§RClicking this button without having 5 Political Power will do nothing, unsurprisingly. Britian will also try to lower your influence while also trying to raise tension.§!" 
+  INF_red_tt:0 "§YReduce Influence\n_________________§!\n\nYou can lower both Russia's and France's total §YInfluence§! by 10. This will cost a total of 50 Political Power, doing so will prevent France and Russia from lowering Political Tension.\n\n§RClicking this button without having 70 Political Power will do nothing, unsurprisingly. Raising tension between the two powers will result in them declaring war on each other.§!" 
+  RUS_FRA_Improve_Relations_minor:0 "Tensions between Russia and France will slightly lower"
+  RUS_FRA_Improve_Relations_average:0 "Tensions between Russia and France will lower"
+  RUS_FRA_Improve_Relations_major:0 "Tensions between Russia and France will greatly lower"
