United Commonwealth Economic Recovery tree completion rewards complete, bonus brigade crisis still needs to be fleshed out but that'll likely come later

--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -8,7 +8,7 @@ PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress ha
 ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
 PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
 ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been completed.§!"
-
+AME_western_agriculture_decisions_tt:0 "£decision_icon_small Unlocks Decisions to Subsidize Farming in the West"
 ##########################
 # IDEAS
 ##########################
@@ -22,6 +22,23 @@ PB_AME_Racial_Segregation:0 "Racial Segregation"
 PB_AME_Racial_Segregation_desc:0 "Despite the emancipation of slaves in the 1800s, the Commonwealth still maintains many segregation laws, even in the North. Due to this, the Commonwealth’s Home Army similarly remains segregated, making recruiting difficult."
 PB_AME_British_Imperial_Confederation:0 "British Imperial Confederation"
 PB_AME_British_Imperial_Confederation_desc:0 "The [AME.GetName] is part of the British Imperial Confederation, the more formal name for the Greater British Empire. As the part of the Confederation, the nation benefits from the Imperial Parliament and the Imperial Economy"
+
+
+
+PB_AME_Protectionist_Recovery_1:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_2:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_3:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_4:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_1:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_2:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_3:0 "Gradual Recovery from the Crisis"
+PB_AME_restore_confidence_in_the_pound:0 "Self-Sufficient Pound"
+AME_industrial_recovery_plan_idea:0 "Industrial Recovery Effort"
+PB_AME_Loosen_Regulations_Idea:0 "Loosensed Business Regulations"
+AME_protectionist_new_dawn_over_philly:0 "New Economic Resurgence"
+AME_libtard_new_dawn_over_philly:0 "New Economic Resurgence"
+
+
 ##########################
 # PARLIAMENT MECHANICS
 ##########################
