Lang election tree skeleton and loc complete

--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -107,6 +107,40 @@ AME_the_election_draws_near:0 "The 1935 Election"
 AME_the_election_draws_near_desc:0 ""
 
 
+AME_the_lang_administration:0 "The Lang Administration"
+AME_the_lang_administration_desc:0 ""
+AME_expand_union_power:0 "Expand Union Power"
+AME_expand_union_power_desc:0 ""
+AME_fight_segregation_head_on:0 "Fight Segregation Head-on"
+AME_fight_segregation_head_on_desc:0 ""
+AME_rights_to_the_workers:0 "Rights for the Workers"
+AME_rights_to_the_workers_desc:0 ""
+AME_further_expand_the_ova:0 "Further Expand the O.V.A."
+AME_further_expand_the_ova_desc:0 ""
+AME_crack_down_on_southern_lawmakers:0 "Crackdown on Southern Lawmakers"
+AME_crack_down_on_southern_lawmakers_desc:0 ""
+AME_dismantle_the_institution:0 "Dismantle the Institution"
+AME_dismantle_the_institution_desc:0 ""
+AME_the_american_bismarck:0 "The American Bismarck"
+AME_the_american_bismarck_desc:0 ""
+AME_pass_a_constitutional_amendment:0 "Pass a Constitutional Amendment"
+AME_pass_a_constitutional_amendment_desc:0 ""
+AME_deal_with_southern_resistance:0 "Deal with Southern Resistance"
+AME_deal_with_southern_resistance_desc:0 ""
+AME_a_solution_long_overdue:0 "A Solution Long Overdue"
+AME_a_solution_long_overdue_desc:0 ""
+
+AME_the_curtin_administration:0 "The Curtin Administration"
+AME_the_curtin_administration_desc:0 ""
+
+AME_davis_holds_on:0 "Davis Holds On"
+AME_davis_holds_on_desc:0 ""
+
+AME_the_aberhart_administration:0 "The Aberhart Administration"
+AME_the_aberhard_administration_desc:0 ""
+
+
+
 ##########################
 # EVENTS
 ##########################
