--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿ l_english:
 
   ##########################
   # MINISTERS
@@ -66,9 +66,13 @@
   PB_ENG_General_Election:0 "The General Election"
   PB_ENG_General_Election_desc:0 "The General Elections are finally here, and this election shall decide the fate of not only Britain and her economy, but the rest of the empire as a whole. All political parties in the spectrum, from the Worker's Union to the NPP, are vying for power, with varying policies that may strengthen or shaken the empire, so vote wisely."
   PB_ENG_London_Calling:0 "London Calling"
+  PB_ENG_London_Calling_desc:0 "With a new government being voted into office, certain factions in the new government have been split on party loyalty and principles. All we need is the King Emperor's approval to seal the fate of the nation."
+
 
   PB_ENG_Tory_Victory:0 "A Tory Victory"
+  PB_ENG_Tory_Victory_desc:0 "The oldest political party in the United Kingdom and the world has won the election. With new hardships facing the British people the electorate has decided to renew the Tory premiership of Britain. Promising reform not too radical whilst also returning to old conservative values."
   PB_ENG_Hoare_PM:0 "New Tory Progressivism"
+  PB_ENG_Hoare_PM_desc:0 "Prime Minister Hoare has won his party's support becoming the new Prime Minister of the world's most powerful nation. Promising progressive reform to ease the suffering of the British people whilst returning to Anglican values Prime Minister Hoarse is seen as a beacon of hope from the Tory party to the British public."
   PB_ENG_Eden_PM:0 "The Eden Clique"
   PB_ENG_Hunger_Reforms:0 "The Hunger Plan"
   PB_ENG_Education_Reforms:0 "Education Reforms"
@@ -77,6 +81,7 @@
   PB_ENG_Organic_Development:0 "An Organic Society"
   PB_ENG_Steady_as_She_Goes:0 "Steady as She Goes"
   PB_ENG_Revitalize_Private_Sector:0 "Revitalize the Private Sector"
+  PB_ENG_Calm_the_Hell_Down:0 "Britain Calm the Hell Down"
   PB_ENG_Throw_the_Unions:0 "A Sit-Down with the Unions"
   PB_ENG_Stability_under_Control:0 "Getting the House in Order"
 
