--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -8,7 +8,7 @@ PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress ha
 ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
 PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
 ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been completed.§!"
-
+AME_western_agriculture_decisions_tt:0 "£decision_icon_small Unlocks Decisions to Subsidize Farming in the West"
 ##########################
 # IDEAS
 ##########################
@@ -22,6 +22,23 @@ PB_AME_Racial_Segregation:0 "Racial Segregation"
 PB_AME_Racial_Segregation_desc:0 "Despite the emancipation of slaves in the 1800s, the Commonwealth still maintains many segregation laws, even in the North. Due to this, the Commonwealth’s Home Army similarly remains segregated, making recruiting difficult."
 PB_AME_British_Imperial_Confederation:0 "British Imperial Confederation"
 PB_AME_British_Imperial_Confederation_desc:0 "The [AME.GetName] is part of the British Imperial Confederation, the more formal name for the Greater British Empire. As the part of the Confederation, the nation benefits from the Imperial Parliament and the Imperial Economy"
+
+
+
+PB_AME_Protectionist_Recovery_1:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_2:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_3:0 "Gradual Recovery from the Crisis"
+PB_AME_Protectionist_Recovery_4:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_1:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_2:0 "Gradual Recovery from the Crisis"
+PB_AME_Libtard_Recovery_3:0 "Gradual Recovery from the Crisis"
+PB_AME_restore_confidence_in_the_pound:0 "Self-Sufficient Pound"
+AME_industrial_recovery_plan_idea:0 "Industrial Recovery Effort"
+PB_AME_Loosen_Regulations_Idea:0 "Loosensed Business Regulations"
+AME_protectionist_new_dawn_over_philly:0 "New Economic Resurgence"
+AME_libtard_new_dawn_over_philly:0 "New Economic Resurgence"
+
+
 ##########################
 # PARLIAMENT MECHANICS
 ##########################
@@ -88,6 +105,66 @@ AME_a_new_dawn_over_philadelphia:0 "A New Dawn over Philadelphia"
 AME_a_new_dawn_over_philadelphia_desc:0 ""
 AME_the_election_draws_near:0 "The 1935 Election"
 AME_the_election_draws_near_desc:0 ""
+
+
+AME_the_lang_administration:0 "The Lang Administration"
+AME_the_lang_administration_desc:0 ""
+AME_expand_union_power:0 "Expand Union Power"
+AME_expand_union_power_desc:0 ""
+AME_fight_segregation_head_on:0 "Fight Segregation Head-on"
+AME_fight_segregation_head_on_desc:0 ""
+AME_rights_to_the_workers:0 "Rights for the Workers"
+AME_rights_to_the_workers_desc:0 ""
+AME_further_expand_the_ova:0 "Further Expand the O.V.A."
+AME_further_expand_the_ova_desc:0 ""
+AME_crack_down_on_southern_lawmakers:0 "Crackdown on Southern Lawmakers"
+AME_crack_down_on_southern_lawmakers_desc:0 ""
+AME_dismantle_the_institution:0 "Dismantle the Institution"
+AME_dismantle_the_institution_desc:0 ""
+AME_the_american_bismarck:0 "The American Bismarck"
+AME_the_american_bismarck_desc:0 ""
+AME_pass_a_constitutional_amendment:0 "Pass a Constitutional Amendment"
+AME_pass_a_constitutional_amendment_desc:0 ""
+AME_deal_with_southern_resistance:0 "Deal with Southern Resistance"
+AME_deal_with_southern_resistance_desc:0 ""
+AME_a_solution_long_overdue:0 "A Solution Long Overdue"
+AME_a_solution_long_overdue_desc:0 ""
+
+AME_the_curtin_administration:0 "The Curtin Administration"
+AME_the_curtin_administration_desc:0 ""
+AME_push_a_progressive_economy:0 "Push for a Progressive Economy"
+AME_push_a_progressive_economy_desc:0 ""
+AME_sway_the_mover_industry:0 "Sway the Mover Industry"
+AME_sway_the_mover_industry_desc:0 ""
+AME_anti_segregationist_films:0 "Anti-Segregationist Films"
+AME_anti_segregationist_films_desc:0 ""
+AME_fund_pro_imperial_films:0 "Support Pro-Empire Films"
+AME_fund_pro_imperial_films_desc:0 ""
+AME_progressive_policies_to_match:0 "Progressive Policies to Match"
+AME_progressive_policies_to_match_desc:0 ""
+AME_negotiate_with_southern_lawmakers:0 "Negotiate with Southern Lawmakers"
+AME_negotiate_with_southern_lawmakers_desc:0 ""
+AME_gradual_desegregation_plans:0 "Gradual Desegregation Plans"
+AME_gradual_desegregation_plans_desc:0 ""
+AME_not_yet_the_citadel_of_civilization:0 "Not yet the Citadel of Civilization"
+AME_not_yet_the_citadel_of_civilization_desc:0 ""
+AME_grant_token_concessions_to_unions:0 "Grant Token Concessions to Unions"
+AME_grant_token_concessions_to_unions_desc:0 ""
+AME_mixed_market_policies:0 "Mixed Market Policies"
+AME_mixed_market_policies_desc:0 ""
+AME_increase_our_exports:0 "Increase our Exports"
+AME_increase_our_exports_desc:0 ""
+AME_dominate_the_continent:0 "Dominate the Continent"
+AME_dominate_the_continent_desc:0 ""
+AME_imperial_powerhouse:0 "The Imperial Powerhouse"
+AME_imperial_powerhouse_desc:0 ""
+
+AME_davis_holds_on:0 "Davis Holds On"
+AME_davis_holds_on_desc:0 ""
+
+AME_the_aberhart_administration:0 "The Aberhart Administration"
+AME_the_aberhard_administration_desc:0 ""
+
 
 
 ##########################
